# GSfS

./: .gitignore  LICENSE  README.md  app.py  config.json  pyproject.toml  requirements.txt  temp.json  test.md  test.py
.github/prompts/: create-readme.prompt.md
.legacy/scraper/: rq_sc.py
data/: feeds.json  rss_collector.db
data/pages/: Human brains are preconfigured with instructions for understanding the world.html  Implications of AI to schools.html
data/pages/md/: Human brains are preconfigured with instructions for understanding the world.md
docs/: pre27Nov.md  prompt.md
feed-collector/: feeds_config.json  rss_collector.py  rssclt.py
h2m/: go.mod  go.sum  main.go
scraper/: rq_sc.py  scbase.py
src/: content_processor.py  database.py  llm_scorer.py  md_writer.py  prompt.py  rss_reader.py
src/scraper/: PlaywrightRawScraper.py  PlaywrightRenderedScraper.py  ScraperBase.py
src/utils/: logger_config.py
tests/: test_basic.py  test_markdown.py
